<resources>
    <string name="app_name">E-Commerce</string>

    <string name="request_email">Enter Email</string>
    <string name="request_password">Enter Password</string>
    <string name="request_name">Enter Name</string>
    <string name="request_user">Enter User</string>
    <string name="request_contact">Enter Contact</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="forgot_password">Forgot Password</string>
    <string name="access_register">Register Now</string>
    <string name="access_login">Login now</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>


    <color name="green">#029350</color>
    <color name="white">#ffffff</color>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Inicio">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_Product">Products</string>
    <string name="menu_help">Help</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="AddImage">Add Image</string>
    <string name="ChangeImage">Change Image</string>
    <string name="CategoryName">Category name</string>
    <string name="Save">Save</string>


    <!--Button actions-->
    <string name="button_delete">DELETE</string>
    <string name="button_update">UPDATE</string>

    <!--Car Strings-->
    <string name="car_proceed">PROCEED TO CHECKOUT</string>

</resources>