<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_category"
                android:title="@string/menu_category"/>
        <item
                android:id="@+id/nav_product"
                android:icon="@drawable/ic_product"
                android:title="@string/menu_Product"/>
    </group>

    <group android:id="@+id/menu_bottom"
           android:checkableBehavior="single"
    >
        <item android:title="@string/menu_logout"
              android:id="@+id/nav_logout"
              android:icon="@drawable/ic_logout"/>

        <item android:title="@string/menu_Profile"
              android:id="@+id/menu_Profile"
              android:icon="@drawable/ic_profile"/>

        <item android:id="@+id/nav_help"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help"/>
    </group>
</menu>