<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".RegisterActivity">

    <TextView
            android:text="@string/access_login"
            android:layout_width="93dp"
            android:layout_height="18dp" android:id="@+id/textview_login"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/button_register"
            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.127" android:onClick="sendToLogin"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textview_forgotPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.58"
            android:textColor="@color/white" android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/button_register" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"/>
    <TextView
            android:text="|"
            android:layout_width="12dp"
            android:layout_height="26dp" android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white" app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintTop_toBottomOf="@+id/button_register" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="286dp"
            android:layout_height="42dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.552"/>
    <EditText
            android:layout_width="286dp"
            android:layout_height="42dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.552"/>
    <EditText
            android:layout_width="289dp"
            android:layout_height="41dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextTextEmailAddress2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" android:layout_marginTop="28dp"/>
    <EditText
            android:layout_width="289dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" android:layout_marginTop="36dp"/>
    <EditText
            android:layout_width="287dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp"/>
    <EditText
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.572"/>
    <TextView
            android:text="@string/request_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.187"/>
    <TextView
            android:text="@string/request_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.187"/>
    <TextView
            android:text="@string/request_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintHorizontal_bias="0.194"/>
    <TextView
            android:text="@string/request_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintHorizontal_bias="0.221"/>
    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
            app:layout_constraintHorizontal_bias="0.238"/>
    <TextView
            android:text="@string/request_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
            app:layout_constraintHorizontal_bias="0.216"/>
</androidx.constraintlayout.widget.ConstraintLayout>